test/integration/bad/tuples/incomplete3.stan
model { tuple( complex , complex ) while
